--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -51,7 +51,7 @@ map:
       type: cartodb
 
   # Legend Layers
-  
+
     - id: siteinfo
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
@@ -638,6 +638,48 @@ place:
       dataset: gtopenspace2
       icon_url: /static/css/images/markers/marker-star.png
       value: feature
+      label: _(Featured site)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: true
+        - name: comment
+          type: textarea
+          prompt: _(Comment:)
+          display_prompt:
+          placeholder: _(Enter comment...)
+          optional: true
+
+    - category: streetscape
+      includeOnForm: false     
+      name: location_type
+      dataset: gtopenspace1
+      icon_url: /static/css/images/markers/marker-star.png
+      value: streetscape
+      label: _(Featured site)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title:)
+          display_prompt: _(Title:)
+          placeholder: _(Enter title...)
+          optional: true
+        - name: comment
+          type: textarea
+          prompt: _(Comment:)
+          display_prompt:
+          placeholder: _(Enter comment...)
+          optional: true
+
+    - category: park-improvement
+      includeOnForm: false     
+      name: location_type
+      dataset: gtopenspace1
+      icon_url: /static/css/images/markers/marker-star.png
+      value: park-improvement
       label: _(Featured site)
       fields:
         - name: title
