--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -61,12 +61,6 @@ map:
       attribution: 'Hello World'
 
     # Legend Layers
-    # - id: restoration
-    #   url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
-    #   type: landmark
-    #   sources:
-    #     - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
-
     - id: story-markers
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
@@ -93,13 +87,7 @@ map:
       type: place
       slug: air
 
-    # - id: vision
-    #   url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
-    #   sources:
-    #     - "http://a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
-    #   type: landmark
-
-       # WRIA9 watershed
+    # WRIA9 watershed
     - id: watershed
       type: cartodb
       url: "https://heyduwamishcore.cartodb.com/api/v2/viz/61226fec-0399-11e6-8de1-0e31c9be1b51/viz.json"
@@ -748,10 +736,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: rail
       includeOnForm: false
       name: location_type
@@ -768,10 +768,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: school
       includeOnForm: false
       name: location_type
@@ -788,10 +800,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: town-hall
       includeOnForm: false
       name: location_type
@@ -808,12 +832,24 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: wetland
-      includeOnForm: false
+      includeOnForm: true
       name: location_type
       dataset: vision
       icon_url: /static/css/images/markers/marker-land_comp.png
@@ -828,10 +864,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: police
       includeOnForm: false
       name: location_type
@@ -848,10 +896,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: mapbox
       includeOnForm: false
       name: location_type
@@ -868,10 +928,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: park2
       includeOnForm: false
       name: location_type
@@ -888,10 +960,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: industrial
       includeOnForm: false
       name: location_type
@@ -908,10 +992,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: theatre
       includeOnForm: false
       name: location_type
@@ -928,10 +1024,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: swimming
       includeOnForm: false
       name: location_type
@@ -948,10 +1056,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: danger
       includeOnForm: false
       name: location_type
@@ -968,10 +1088,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: bicycle
       includeOnForm: false
       name: location_type
@@ -988,10 +1120,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: zoo
       includeOnForm: false
       name: location_type
@@ -1008,10 +1152,22 @@ place:
           optional: false
         - name: description
           type: rawHTML
-          prompt: _(Raw HTML:)
+          prompt: _(Description:)
           display_prompt: ""
-          placeholder: _(Enter raw HTML...)
+          placeholder: _(Your description...)
           optional: true
+        - name: marker-color
+          type: radio_big_buttons
+          prompt: _(Icon color:)
+          display_prompt: _(Icon color:)
+          content:
+            - label: _(a3e46b)
+              value: "a3e46b"
+            - label: _(f1f075)
+              value: "f1f075"
+            - label: _(f86767)
+              value: "f86767"
+          optional: false
     - category: observation
       includeOnForm: true
       name: location_type
