--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -78,13 +78,13 @@ map:
           fillOpacity: '{{properties.fill-opacity}}'
           weight: "{{properties.stroke-width}}"
 
-    - id: duwamish
+    - id: pboakland
       type: place
-      slug: report
+      slug: idea
 
 # The values map the place type to map icons (defined below).
 place_types:
-  observation:
+  youth:
     label: _(Observation)
     rules:
       - condition: '{{layer.focused}} === true'
@@ -114,7 +114,7 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  question:
+  senior:
     label: _(Question)
     rules:
       - condition: '{{layer.focused}} === true'
@@ -144,7 +144,7 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  idea:
+  parks:
     label: _(Idea)
     rules:
       - condition: '{{layer.focused}} === true'
@@ -174,7 +174,7 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  complaint:
+  streets:
     label: _(Complaint)
     rules:
       - condition: '{{layer.focused}} === true'
@@ -204,8 +204,8 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  greenwall:
-    label: _(Green Screen Vote)
+  health:
+    label: _(Health and Safety)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -265,7 +265,7 @@ sidebar:
           title: _(Community Data)
           visibleDefault: true
           layers:
-            - id: duwamish
+            - id: pboakland
               title: _(Community Reports)
               visibleDefault: true
 
@@ -307,9 +307,9 @@ activity:
 
 place:
   adding_supported: true
-  add_button_label: _(Add a report to the map!)
+  add_button_label: _(Share your idea!)
   # Labels for the buttons that toggle the map and list views
-  show_list_button_label: _(See All Reports)
+  show_list_button_label: _(See full list)
   show_map_button_label: _(Show the Map)
   action_text: _(added)
   title: _(Tell us more...)
@@ -325,16 +325,16 @@ place:
     - category: youth
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: pboakland
       icon_url: /static/css/images/markers/marker-observation.png
       value: youth
       label: _(Youth Services)
       fields:
         - name: title
           type: text
-          prompt: _(Title of your observation:)
+          prompt: _(Title of your idea:)
           display_prompt: _(Title:)
-          placeholder: _(Enter title...)
+          placeholder: _( )
           optional: false
         - name: pollution_type
           type: checkbox_big_buttons
@@ -354,14 +354,14 @@ place:
           optional: true # NOTE: checkbox_big_button inputs have no validation
         - name: description
           type: textarea
-          prompt: _(Description:)
+          prompt: _(What is your idea for how to improve our neighborhood?:)
           display_prompt: _( )
-          placeholder: _(Enter description...)
+          placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
           optional: false
     - category: senior
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: pboakland
       icon_url: /static/css/images/markers/marker-question.png
       value: senior
       label: _(Senior Services)
@@ -380,7 +380,7 @@ place:
     - category: parks
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: pboakland
       icon_url: /static/css/images/markers/marker-idea.png
       value: parks
       label: _(Parks and Recreation)
@@ -400,7 +400,7 @@ place:
     - category: streets
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: pboakland
       icon_url: /static/css/images/markers/marker-complaint.png
       value: streets
       label: _(Streets and Sidewalk)
@@ -417,7 +417,26 @@ place:
           display_prompt: _( )
           placeholder: _(Description...)
           optional: false
-
+    - category: health
+      includeOnForm: true
+      name: location_type
+      dataset: pboakland
+      icon_url: /static/css/images/markers/marker-complaint.png
+      value: health
+      label: _(Health and Safety)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title of your complaint:)
+          placeholder: _(Enter title...)
+          display_prompt: _(Title:)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: "_(What's your complaint?)"
+          display_prompt: _( )
+          placeholder: _(Description...)
+          optional: false
   # define form elements that appear on every form here
   common_form_elements:
     - name: submitter_name
@@ -444,7 +463,7 @@ place:
         - key: accept
           value: image/*
     - type: submit
-      label: _(Put it on the map!)
+      label: _(Submit!)
 
   #### end dynamic form config ####
 
@@ -490,10 +509,10 @@ pages:
     name: overview
     start_page: true
 
-  - title: _(Background)
+  - title: _(Guidelines)
     slug: background
     name: background
-    hide_from_top_bar: true
+    hide_from_top_bar: false
 
   - title: _(Get involved)
     slug: getinvolved
