--- a/src/flavors/pboakland/config.yml
+++ b/src/flavors/pboakland/config.yml
@@ -336,28 +336,79 @@ place:
           display_prompt: _(Title:)
           placeholder: _( )
           optional: false
-        - name: pollution_type
-          type: checkbox_big_buttons
-          prompt: _(Types of pollution seen:)
-          display_prompt: _( )
-          content:
-            - label: _(Sewage)
-              value: sewage
-            - label: _(Tires)
-              value: tires
-            - label: _(Illegal dumpsite)
-              value: dumpsite
-            - label: _(Litter)
-              value: litter
-            - label: _(Other)
-              value: other
-          optional: true # NOTE: checkbox_big_button inputs have no validation
         - name: description
           type: textarea
           prompt: _(What is your idea for how to improve our neighborhood?:)
           display_prompt: _( )
           placeholder: _(Ideas must be for a program, service, or infrastructure improvement benefiting low-to-moderate income communities in the district.)
           optional: false
+        - name: private-phone
+          type: text
+          prompt: _(Your phone number:)
+          display_prompt: _()
+          placeholder: _(Your phone number will not appear on the map)
+          optional: true
+        - name: private-age
+          type: text
+          prompt: _(Your age:)
+          display_prompt: _()
+          placeholder: _(Your age will not appear on the map)
+          optional: true
+        - name: private-ethnicity
+          type: radio_big_buttons
+          annotation: _(Your ethnicity will not appear on the map)
+          prompt: _(Your ethnicity:)
+          display_prompt: _(Ethnicity:)
+          content:
+            - label: _(American Indian/Alaskan Native)
+              value: indian-alaskan
+            - label: _(Asian)
+              value: asian
+            - label: _(Black or African American)
+              value: black
+            - label: _(Hispanic or Latino/a)
+              value: hispanic
+            - label: _(Native Hawaiian or Pacific Islander)
+              value: hawaiian-pacific
+            - label: _(White)
+              value: white
+            - label: _(Other)
+              value: other
+          optional: true
+        - name: private-income
+          type: dropdown
+          prompt: _(Your income:)
+          annotation: _(Your income will not appear on the map)
+          content:
+            - label: _(Under $10,000)
+              value: under-10k
+            - label: _($10,000 - $14,999)
+              value: 10k-15k
+            - label: _($15,000 - $24,999)
+              value: 15k-25k
+            - label: _($25,000 - $34,999)
+              value: 25k-35k
+            - label: _($35,000 - $49,000)
+              value: 35k-49k
+            - label: _($50,000 - $74,999)
+              value: 50k-75k
+            - label: _($75,000 - $99,000)
+              value: 75k-99k
+            - label: _($100,000 - $149,000)
+              value: 100k-149k
+            - label: _($150,000 or more)
+              value: 150k-or-more
+          optional: false
+        - name: volunteer
+          type: binary_toggle
+          prompt: _(I want to volunteer:)
+          display_prompt: _(I want to volunteer:)
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
+          optional: true
     - category: senior
       includeOnForm: true
       name: location_type
